[gd_scene load_steps=2 format=3 uid="uid://cs7cmm6irnpqu"]

[ext_resource type="Script" path="res://scenes/stats/stats.gd" id="1_wa7yw"]

[node name="Stats" type="CanvasLayer"]
script = ExtResource("1_wa7yw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 25.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 113.0
color = Color(0.525101, 0.525101, 0.525101, 0.560784)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 248.0
offset_bottom = 108.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="FPS" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS: 0"

[node name="PhyFrameCount" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Simulation step count: 0"

[node name="ProcessFrameCount" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Simulation step count: 0"

[node name="EngineTime" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Simulation step count: 0"
